[package]
name = "star-wars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#cargo build --release --target wasm32-unknown-unknown
#wasm-bindgen --out-name bevy_wasm --out-dir wasm/target --target web target/wasm32-unknown-unknown/release/bevy-learn.wasm

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
#bevy = { version = "0.8" }
bevy_rapier3d = { version = "0.18", features = [ "simd-stable", "debug-render" ] }
#rstar = "0.9"
bevy-web-resizer = "3.0.0"

# Enable only a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
